testing pdf embed

--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -46,11 +46,13 @@
 	class="future">
     <h2 class="title">Course Syllabus</h2>
 
-    Hellow
-    <object data="./data/Syllabus.pdf" type="application/pdf">
+    2
+    <div class='stretch'>
+    <object data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
         <iframe src="https://docs.google.com/viewer?url=your_url_to_pdf&embedded=true"></iframe>
     </object>  
-    world
+    </div>
+    3
       
     <html>
     <body>
