testing pdf embed

--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -49,15 +49,15 @@
     2
     <div class='stretch'>
     <object data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
-        <iframe src="https://docs.google.com/viewer?url=your_url_to_pdf&embedded=true"></iframe>
+        <iframe src="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf&embedded=true"></iframe>
     </object>  
     </div>
     3
       
     <html>
     <body>
-        <object data="./data/Syllabus.pdf" type="application/pdf">
-            <embed src="./data/Syllabus.pdf" type="application/pdf" />
+        <object data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
+            <embed src="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf" />
         </object>
     </body>
     </html>
@@ -65,7 +65,7 @@
 
 
 
-<section>
+<section class="future" data-transition="none">
     <div class="citation">
         <a href="http://mbe.oxfordjournals.org/content/22/5/1185.short">
             Drummond et al. 2005
