--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>China 2018</title>
+    <title>Principles and Practice of Modern DNA Sequencing</title>
     <link rel="stylesheet" href="../reveal/css/reveal.css">
     <link rel="stylesheet" href="../eaton-lab.css">
     <link rel="stylesheet" href="../reveal/lib/css/zenburn.css">    
