--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -40,27 +40,42 @@
 
 
 <!-- SLIDE 2 -->
+<section
+    data-background="white" 
+    data-transition="none" 
+    class="future"
+    style="top: -20px; display: none;" 
+    hidden="">
+    <h3 class="title">Why are we here?</h3>
+    <img src="./data/xkcd-dna.png" style="width: 60%; height: 20%;">
+    <br>
+    <p> <b>Genome sequencing</b> has revolutionized biological research. 
+        But learning to apply genomics to answer biological questions requires 
+        bioinformatics skills, as well as an understanding of the underlying 
+        genetics.
+    </p>
+</section> 
+
+
+<!-- SLIDE 3 -->
 <section 
-	data-background="white" 
-	data-transition="none" 
-	class="future">
-    <h2 class="title">Course Syllabus</h2>
+    data-background="white" 
+    data-transition="none" 
+    class="future">
+    <h2 class="title">Learning objectives</h2>
+
+
+<section
+    data-background="white" 
+    data-transition="none" 
+    class="future">
 
     2
-    <div class='stretch'>
+    <div style="width: 80%;">
     <object data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
         <iframe src="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf&embedded=true"></iframe>
     </object>  
-    </div>
-    3
-      
-    <html>
-    <body>
-        <object data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
-            <embed src="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf" />
-        </object>
-    </body>
-    </html>
+    </div>    
 </section>
 
 
