--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -46,64 +46,30 @@
     class="future"
     style="top: -20px; display: none;" 
     hidden="">
-    <h3 class="title">Why are we here?</h3>
-    <img src="./data/xkcd-dna.png" style="width: 60%; height: 20%;">
+    <h3> The objective of this course </h3>
+    <img src="./data/xkcd-dna.png" style="width: 70%; height: 20%;">
     <br>
-    <p> <b>Genome sequencing</b> has revolutionized biological research. 
-        But learning to apply genomics to answer biological questions requires 
-        bioinformatics skills, as well as an understanding of the underlying 
-        genetics.
+    <p> <b>Genome sequencing</b> has revolutionized biological research, but 
+        learning to apply genomics to answer biological questions requires both
+        bioinformatics skills and an understanding of genetics.
     </p>
 </section> 
 
 
-<!-- SLIDE 3 -->
-<section 
-    data-background="white" 
-    data-transition="none" 
-    class="future">
-    <h2 class="title">Learning objectives</h2>
-
-
-<section
-    data-background="white" 
-    data-transition="none" 
-    class="future">
-
-    2
-    <div style="width: 80%;">
-    <object data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
-        <iframe src="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf&embedded=true"></iframe>
-    </object>  
-    </div>    
+<section data-transition="none">
+    <h3> We will learn modern genomic methods</h3>
+    <p> Based on reading and discussing the primary literature 
 </section>
 
-
-
-<section class="future" data-transition="none">
-    <div class="citation">
-        <a href="http://mbe.oxfordjournals.org/content/22/5/1185.short">
-            Drummond et al. 2005
-        </a>
-    </div>
-
-</section>
-
-
-<!-- SLIDE 11 -->
-<!-- data-background-iframe="http://mybinder.org/repo/eaton-lab/toytree" -->
-<section 
-    data-background-iframe="https://jhub.eaton-lab.org"
-    data-background-interactive data-transition="none"
-    style="top:-960px; display: block;" 
-    class="future" 
-    hidden="">       
+<section data-transition="none">
+    <h3> And we will learn to apply modern genomic methods</h3>
+    <p> Through interactive computational exercises in class and as assignments.
 </section>
 
 
 <!-- SLIDE 2 -->
 <section data-background="white" data-transition="none">
-    <h3 >Parse index numbers from loci</h3>
+    <h3 > Grep </h3>
     <pre><code class="python">
 def get_ref_locus_idxs(self):
     idxs = []
@@ -131,6 +97,58 @@ def get_ref_locus_idxs(self):
     return idxs
     </code></pre>
 </section>
+
+
+
+
+<!-- SLIDE 3 -->
+<section 
+    data-background="white" 
+    data-transition="none" 
+    class="future">
+    <h2 class="title">Learning objectives</h2>
+</section>
+
+
+<section
+    data-background="white" 
+    data-transition="none" 
+    class="future">
+
+    <h4>THE SYLLABUS</h4>
+    <div style="width: 80%;">
+    <object data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
+        <iframe src="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf&embedded=true"
+        width="800"
+        height="500">           
+        </iframe>
+    </object>  
+    </div>    
+</section>
+
+
+
+<section class="future" data-transition="none">
+    <div class="citation">
+        <a href="http://mbe.oxfordjournals.org/content/22/5/1185.short">
+            Drummond et al. 2005
+        </a>
+    </div>
+
+</section>
+
+
+<!-- SLIDE 11 -->
+<!-- data-background-iframe="http://mybinder.org/repo/eaton-lab/toytree" -->
+<section 
+    data-background-iframe="https://jhub.eaton-lab.org"
+    data-background-interactive data-transition="none"
+    style="top:-960px; display: block;" 
+    class="future" 
+    hidden="">       
+</section>
+
+
 
 
 <!-- SLIDE 3 -->
