--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -56,12 +56,12 @@
 </section> 
 
 
-<section data-transition="none">
+<section data-transition="none" class="future" hidden="">
     <h3> We will learn modern genomic methods</h3>
     <p> Based on reading and discussing the primary literature 
 </section>
 
-<section data-transition="none">
+<section data-transition="none" class="future" hidden="">
     <h3> And we will learn to apply modern genomic methods</h3>
     <p> Through interactive computational exercises in class and as assignments.
 </section>
@@ -116,14 +116,12 @@ def get_ref_locus_idxs(self):
     class="future">
 
     <h4>THE SYLLABUS</h4>
-    <div style="width: 80%;">
-    <object data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
+    <object align="center" data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
         <iframe src="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf&embedded=true"
         width="800"
-        height="500">           
+        height="550">           
         </iframe>
     </object>  
-    </div>    
 </section>
 
 
