--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -90,17 +90,7 @@
 </section>
 
 
-<!-- SLIDE 4 (POLL: WHY ARE YOU HERE?) -->
-<section 
-    data-background-iframe="https://www.polleverywhere.com/free_text_polls/QJ4o7fHuEWsxeJJLOfKhJ?preview=true"
-    data-background-interactive data-transition="none"
-    style="top:-960px; display: block;" 
-    class="future" 
-    hidden="">       
-</section>
-
-
-<!-- SLIDE 5 -->
+<!-- SLIDE 4 (OUR LEARNING OBJECTIVES)-->
 <section 
     data-background="white" 
     data-transition="none" 
@@ -111,22 +101,31 @@
     <p> 
         Learn to design, conduct, and analyze genomic experiments. By the end 
         of class you should be able to: 
-
-        <p style="font-size: 0.75em; color: #568259; font-weight: 400; line-height: 2.2em; 
-">        
-        <br>
+    <p>
+    <p style="font-size:0.75em; color:#568259; font-weight:400; line-height:2.2em;">        
+    <br>
     1. Describe the structure of genomes and how information is represented in them.
     <br>
     2. Choose appropriate sequencing techniques for genomic experiments.
     <br>
     3. Analyze genomic data using computational methods.
     </p>
-    </p>
     </div>
 </section>
 
 
-<!-- SLIDE 6 (-->
+<!-- SLIDE 5 (POLL: WHY ARE YOU HERE?) -->
+<section 
+    data-background-iframe="https://www.polleverywhere.com/free_text_polls/QJ4o7fHuEWsxeJJLOfKhJ?preview=true"
+    data-background-interactive data-transition="none"
+    style="top:-960px; display: block;" 
+    class="future" 
+    hidden="">       
+</section>
+
+
+
+<!-- SLIDE 6 (THE SYLLABUS -- TOPICS) -->
 <section
     data-background="white" 
     data-transition="none" 
@@ -136,7 +135,7 @@
     <object align="center" data="https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf" type="application/pdf">
         <iframe src="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/session-1/data/Syllabus.pdf&embedded=true"
         width="800"
-        height="550">           
+        height="650">           
         </iframe>
     </object>  
 </section>
