--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -124,7 +124,6 @@
 </section>
 
 
-
 <!-- SLIDE 6 (THE SYLLABUS -- TOPICS) -->
 <section
     data-background="white" 
@@ -141,15 +140,26 @@
 </section>
 
 
-
+<!-- SLIDE 7: FIRST TOPICS: WHAT IS THE GENOME AND HISTORY OF GENOMICS -->
 <section class="future" data-transition="none">
-    <div class="citation">
-        <a href="http://mbe.oxfordjournals.org/content/22/5/1185.short">
-            Drummond et al. 2005
-        </a>
-    </div>
-
+    <h2> Today's topics: </h2>
+    <br>
+    <h4 style="color:#568259"> Genome Structure </h4>
+    <h4 style="color:#568259"> A Brief History of Genomics</h4>    
+    <h4 style="color:#568259"> An introduction to Codio</h4>        
 </section>
+
+
+<!-- CODIO TOUR -->
+<section 
+    data-background-iframe="https://codio.com/home/teacher"
+    data-background-interactive data-transition="none"
+    style="top:-960px; display: block;" 
+    class="future" 
+    hidden="">       
+</section>
+
+
 
 
 <!-- SLIDE 11 -->
