--- a/slides/genomics/session-2/index.html
+++ b/slides/genomics/session-2/index.html
@@ -33,7 +33,7 @@
     <div style="margin-left: auto; margin-top: 20%">
     <h2 class="title">Principles and Applications of Modern DNA Sequencing</h2>
     <p style="color: lightgrey"> EEEB GU4055</p>
-    <h5 style="color: white">Session 1: Introduction to computational genomics</h4>
+    <h5 style="color: white">Session 2: Introduction to Python, Genomic Data, and Text</h4>
     <br>
     </div>
 </section>
@@ -52,7 +52,7 @@
     <p> <b>Genome sequencing</b> has revolutionized biological research, but 
         learning to apply genomics to answer biological questions requires both
         bioinformatics skills and an understanding of genetics.
-    </p>
+    </p>   
 </section> 
 
 
