--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -15,11 +15,20 @@
 
 <body>
 
+
 <h4>
     <a href="session-1/index.html">Session 1</a>
     <br>
     <a href="session-2/index.html">Session 2</a>
     <br>
+
+    <p>
+        email policy, disability statement, standard language, ..., 
+        guidelines for office hours, ..., guide line on working in groups, 
+        lab reservation, ..., show their errors ...
+
+    </p>
+
 </h4>
 
 </body>
