--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -148,28 +148,103 @@
     </object>  
     </section> -->
 
-    <section>
-        <h4>Class format</h4>
-        <p>
-            - Assigned readings & computational assignments between classes.  
-            - Discussion of readings in class.      
-            - Lecture on new topics
-            - In class computation primers
-            - ... repeat
 
+    <section>
+        <h4>Class format. In each class we will:</h4>
+        <p style='font-size:0.75em; 
+        text-align: left; margin-left: 100px; margin-right: 100px'>
+            <br>
+            1. Discuss previous reading and review previous assignments.      
+            <br><br>
+            2. Introduce new topics.
+            <br><br>
+            3. Assign readings and assignments on the new topic.
+            <br><br>
+            <span style=color:red>
+            - Mon. assigned work load will be light, Wed. will be intensive.
+            <br>
+            - Assignments are due before the start of next class, else score=0.
+            </span>                  
         </p>
     </section>
 
     <section>
-        <h5>Project proposal and presentation</h5>
-        <p>...</p>
+        <h4>Project proposal and presentation</h4>
+        <br>
+        <p style='font-size:0.75em; 
+        margin-left: 100px; margin-right: 100px;'>
+        Propose a novel use/question/investigation using a modern genomic 
+        technology; or propose an idea for a new technology/method, how it
+        would work, and why it would be useful.
+        <br>
+        <br>
+
+        This activity will require synthesizing knowledge about technologies
+        we have learned, and about the data contained within genomes.
+        </p>
     </section>
 
     <section>
         <h5>Field trip and report</h5>
-        <p>...</p>
+        <p style='font-size:0.85em;'> 
+        Black Rock Forest Hands-on Portable Genomic Sequencing in the Field</p>
+        <img class=plain  src="./data/blackrock.jpg" style="width: 40%; height: 20%;">
+        <img class=plain  src="./data/nanopore.png" style="width: 40%; height: 20%;">
+        <p style='font-size:0.7em;'>
+        4/26-4/27 (Fri-Sat) Let us know immediately if you cannot make it.</p>
     </section>
+
+
+    <!-- SLIDE 4: THREE TOPICS with link -->
+    <section class="future" data-transition="none">
+        <h2> Grading: </h2>
+        <br>
+        <p style="
+        color:#568259; 
+        text-align: left; 
+        font-size: 1em; 
+        margin-left: 150px;
+        margin-right: 100px;
+        ">
+        Assignments (50%)
+        <br>  
+        Midterm (15%)
+        <br>  
+        Participation/Quizzes (15%)
+        <br>  
+        Project Proposal (5%)
+        <br>  
+        Project Presentation (5%)
+        <br>  
+        Final trip report (10%)
+        <br>  
+    </section>
+
+
+    <section class="future" data-transition="none">
+        <h3> Our Policy on Working in Groups: </h3>
+        <br>
+        <p style="
+        text-align: left; 
+        font-size: 0.8em; 
+        margin-left: 150px;
+        margin-right: 100px;
+        ">
+        You <b>can discuss</b> the assignment with each other, <br>
+        including on the course chatroom on Courseworks. <br>
+        However, you should not post complete answers on <br>
+        the chatroom, and you <b>cannot work together</b> in groups <br>
+        to complete assignments or share answers.<br>       
+        <br>  
+        We have office hours available between each class <br>
+        that you can use to seek extra help with assignments <br>
+        if needed.
+        </p>
+    </section>    
+
 </section>
+
+
 
 
 <!-- SLIDE 4: THREE TOPICS with link -->
@@ -177,49 +252,44 @@
     <h2> Today's topics: </h2>
     <br>
     <br>  
-    <a href="#/5"><h4 style="color:#568259"> Genome Structure </h4></a>
-    <a href="#/6"><h4 style="color:#568259"> A Brief History of Genomics</h4></a>
-    <a href="#/7"><h4 style="color:#568259"> An introduction to Codio</h4></a>
-</section>
-
-
-<!-- SLIDE 5 (GENOME HISTORY) -->
-<section data-transition="none" class="future" hidden="">
-
-    <section class="future" hidden="">
-    <h3> Genome Structure, Genomes, and DNA</h3>
-    <a href="https://www.clinicalkey.com/#!/content/book/3-s2.0-B9780128132883000045">
-    <p> Chapter 4 of free online <emph>Molecular Biology</emph> book</p>
-    </a>      
-    <img class=plain src="./data/reading-clark.png" style="width: 65%; height: 20%;">
-    <div class="citation">
-        <a href="https://www.clinicalkey.com/#!/content/book/3-s2.0-B9780128132883000045">
-        Clark (2013)</a>
-    </div>
-    </section>
-
-    <section class="future" hidden="">
-        <h3> Genome Structure, Genomes, and DNA</h3>
-    </section>
-
+    <a href="#/7"><h4 style="color:#568259"> 
+        An introduction to Codio, the <br>
+        Command Line, and Jupyter</h4></a>
 </section>
 
 
 <!-- SLIDE 7: CODIO TOUR -->
 <!-- style="top:-960px; display: block;"  -->
     <!-- class="future"> -->
-<section 
+<section data-transition="none">
+    <section 
     data-background-iframe="https://codio.com/home/teacher"
     data-background-interactive
-    data-transition="none"
     >
+    </section>
+
+    <section>
+        <br>
+        <h4>Why do we use codio?</h4>
+        <p style="font-size:0.75em"> 
+            - Everything runs in the cloud.
+            <br>
+            - You do not need to worry about installing any software.
+            <br>
+            - You can run your assignments on *any* computer.
+        </p>
+
+        <br>
+        <h4>What could go wrong?</h4>
+        <p style="font-size:0.75em"> 
+            - If you completely screw up an assignment you must <br>ask us to reset your unit for you. 
+        </p>
+    </section>
 </section>
 
 
-<!-- SLIDE 8 -->
+<!-- SLIDE 8 INTO TO COMMAND LINE-->
 <section data-transition="none">
-
-
     <section>
         <h3> A quick introduction to the command line</h3>
         <p style="font-size:0.75em"> Lines starting with hash (#) are only comments</p>       
@@ -293,6 +363,55 @@
             complete the <strong>Linux Command Line Tutorial on 
             Codio</strong>, listed under the Courses tab on the left. </p>
         <img class=plain src="./data/codio-linux-tutorial.png" style="width: 90%; height: 20%;">
+    </section>
+</section>
+
+
+<!-- SLIDE 9 INTRO TO JUPYTER NOTEBOOKS -->
+<section 
+    data-transition="none" 
+    class="future" 
+    style="top: -20px; display: none;" 
+    hidden="">
+    
+    <section>
+    <h3> Jupyter is a program that can be started from the command line.</h3>
+    <br>
+    <p style="font-size:0.75em"> 
+        It starts a <strong>server</strong> (the hub) that will open in your 
+        browser (you've seen this). From there, you can start notebooks that 
+        run a <strong>kernel</strong> (e.g., Python session) which you can 
+        interact with through the browser. </p>
+    <pre><code class="bash">
+# Starting jupyter from the command line
+$ jupyter-notebook
+    </pre></code>     
+    </section>
+
+    <section>
+<h3> Starting a <strong>Python</strong> notebook in jupyter</h3>
+<p> Select [New] and then [Python 3] </p>
+<img class=plain src="../../workshop/data/jupyter-hub.png" style="width: 80%; height: 20%;">
+    </section>
+
+
+    <section>
+<h3> Starting a <strong>Python</strong> jupyter notebook in Codio</h3>
+<p> Select [New] and then [Python 3] </p>
+<img class=plain src="../data/jupyter-codio.png" style="width: 80%; height: 20%;">
+    </section>
+
+
+    <section>
+<h3> Getting started with notebooks</h3>
+<p> Code cells (Python), Markdown cells (rich text) </p>
+<img class=plain src="../../workshop/data/jupyter-notebook-empty.png" style="width: 80%; height: 20%;">
+    </section>
+
+    <section>
+<h3> Getting started with notebooks</h3>
+<p> Code cells (Python), Markdown cells (rich text) </p>
+<img class=plain src="../../workshop/data/jupyter-code.png" style="width: 80%; height: 20%;">
     </section>
 </section>
 
