--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -396,9 +396,9 @@ $ jupyter-notebook
 
 
     <section>
-<h3> Starting a <strong>Python</strong> jupyter notebook in Codio</h3>
-<p> Select [New] and then [Python 3] </p>
-<img class=plain src="../data/jupyter-codio.png" style="width: 80%; height: 20%;">
+<h4> Starting a <strong>Python</strong> jupyter notebook in Codio</h4>
+<p> Select Notebooks (.ipynb) from the left file menu.</p>
+<img class=plain src="./data/jupyter-codio.png" style="width: 80%; height: 20%;">
     </section>
 
 
@@ -407,6 +407,7 @@ $ jupyter-notebook
 <p> Code cells (Python), Markdown cells (rich text) </p>
 <img class=plain src="../../workshop/data/jupyter-notebook-empty.png" style="width: 80%; height: 20%;">
     </section>
+
 
     <section>
 <h3> Getting started with notebooks</h3>
