--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -14,14 +14,15 @@
 </head>
 
 <body>
-
-
-<h4 style="margin: 100px;">
-    <a href="session-1/index.html">Session 1</a>
+<div style="margin: 100px; font-size: 1.5em; ">
+    <a href="session-1/index.html">Session 1: Intro to Codio/Bash/Jupyter</a>
     <br>
-    <a href="session-2/index.html">Session 2</a>
     <br>
-</h4>
+    <a href="session-2/index.html">Session 2: Python and Genome Structure</a>
+    <br>
+    <br>
+
+</div>
 
 </body>
 </html>
