--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -15,10 +15,16 @@
 
 <body>
 <div style="margin: 100px; font-size: 1.5em; ">
+
+
+    <a href="https://nbviewer.jupyter.org/github/genomics-course/">
+    Notebook Answers (look in session-n/notebooks/)</a>
+    <br>
+    <br>
     <a href="session-1/index.html">Session 1: Intro to Codio/Bash/Jupyter</a>
     <br>
     <br>
-    <a href="session-2/index.html">Session 2: Python and Genome Structure</a>
+    <a href="session-2/index.html">Session 2: Intro to Python</a>
     <br>
     <br>
 
