--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -17,6 +17,10 @@
 <div style="margin: 100px; font-size: 1.5em; ">
 
 
+    <a href="./syllabus.pdf">
+    Syllabus</a>
+    <br>
+    <br>
     <a href="https://nbviewer.jupyter.org/github/genomics-course/">
     Notebook Answers (look in session-n/notebooks/)</a>
     <br>
