--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -17,7 +17,7 @@
 <div style="margin: 100px; font-size: 1.5em; ">
 
 
-    <a href="./syllabus.pdf">
+    <a href="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/syllabus.pdf&embedded=true">
     Syllabus</a>
     <br>
     <br>
