--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -389,7 +389,7 @@
     <br>
     <p style="font-size:0.75em"> 
         It starts a <strong>server</strong> (the hub) that will open in your 
-        browser (you've seen this). From there, you can start notebooks that 
+        browser. From there, you can start notebooks that 
         run a <strong>kernel</strong> (e.g., Python session) which you can 
         interact with through the browser. </p>
     <pre><code class="bash">
