--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -31,6 +31,9 @@
     <a href="session-2/index.html">Session 2: Intro to Python</a>
     <br>
     <br>
+    <a href="session-3/index.html">Session 3: Python Advanced</a>    
+    <br>
+    <br>
 
 </div>
 
