--- a/slides/genomics/session-3/index.html
+++ b/slides/genomics/session-3/index.html
@@ -349,6 +349,15 @@
   # index last ten items and store as threeprime
   threeprime = dnalist[-10:]
         </code></pre>    
+    </section>   
+
+    <section 
+        data-transition="none"
+        data-background-iframe="
+        https://www.polleverywhere.com/free_text_polls/5AA7uT90JyonCfu4ab7LX?preview=true"
+        style="top:-960px; display: block;" 
+        class="future" 
+        hidden="">       
     </section>    
 
 </section>
@@ -432,6 +441,16 @@
   6
         </code></pre>
     </section>
+
+    <section 
+        data-transition="none"
+        data-background-iframe="
+        https://www.polleverywhere.com/free_text_polls/5AA7uT90JyonCfu4ab7LX?preview=true"
+        style="top:-960px; display: block;" 
+        class="future" 
+        hidden="">       
+    </section>    
+
 </section>
 
 
@@ -579,6 +598,15 @@
   "AGGTTTTACCGGTATGAGTC"
         </code></pre>   
     </section>
+
+    <section 
+        data-transition="none"
+        data-background-iframe="
+        https://www.polleverywhere.com/free_text_polls/5AA7uT90JyonCfu4ab7LX?preview=true"        
+        style="top:-960px; display: block;" 
+        class="future" 
+        hidden="">       
+    </section>    
 </section>
 
 
@@ -732,6 +760,18 @@
           out.write(fasta)
         </code></pre>   
     </section> 
+
+
+    <section 
+        data-transition="none"
+        data-background-iframe="
+        https://www.polleverywhere.com/free_text_polls/5AA7uT90JyonCfu4ab7LX?preview=true"
+        style="top:-960px; display: block;" 
+        class="future" 
+        hidden="">       
+    </section>    
+
+
 </section>       
 
 
