--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -34,6 +34,9 @@
     <a href="session-3/index.html">Session 3: Python Advanced</a>    
     <br>
     <br>
+    <a href="session-4/index.html">Session 4: Genome Annotation</a>
+    <br>
+    <br>
 
 </div>
 
