--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -16,25 +16,32 @@
 <body>
 <div style="margin: 100px; font-size: 1.5em; ">
 
-
+    <hr>
+    Resources:
+    <br>
+    <br>
     <a href="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/syllabus.pdf&embedded=true">
-    Syllabus</a>
+    Syllabus PDF</a>
     <br>
     <br>
     <a href="https://nbviewer.jupyter.org/github/genomics-course/">
-    Notebook Answers (look in session-n/notebooks/)</a>
+    Notebook answers (look in session-n/notebooks/)</a>
     <br>
     <br>
-    <a href="session-1/index.html">Session 1: Intro to Codio/Bash/Jupyter</a>
+    <hr>
+    Lectures:
     <br>
     <br>
-    <a href="session-2/index.html">Session 2: Intro to Python</a>
+    <a href="session-1/index.html">1: Intro to Codio/Bash/Jupyter</a>
     <br>
     <br>
-    <a href="session-3/index.html">Session 3: Python Advanced</a>    
+    <a href="session-2/index.html">2: Intro to Python</a>
     <br>
     <br>
-    <a href="session-4/index.html">Session 4: Genome Annotation</a>
+    <a href="session-3/index.html">3: Python Advanced</a>    
+    <br>
+    <br>
+    <a href="session-4/index.html">4: Genome Annotation</a>
     <br>
     <br>
 
