--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -44,6 +44,9 @@
     <a href="session-4/index.html">4: Genome Annotation</a>
     <br>
     <br>
+    <a href="session-5/index.html">5: Phylogenetics I<a>
+    <br>
+    <br>
 
 </div>
 
